# MostlyForces

./: CMakeLists.txt  README.md
include/: MostlyForces.hpp
src/: MostlyForces.cpp  main.cpp
